# 2025-tp2-concu-grupal

./: .gitignore  Cargo.toml  README.md  cluster_config.txt
admin_compania/: Cargo.toml
admin_compania/src/: admin_actor_impls.rs  admin_business_logic.rs  admin_message_handlers.rs  admin_types.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs  messages.rs  types.rs
cuenta_compania/: Cargo.toml
cuenta_compania/src/: cuenta_compania.rs  heartbeat_manager.rs  main.rs  persistencia.rs
cuenta_compania/src/cuenta_compania/: actor_impls.rs  business_logic.rs  message_handlers.rs
estacion/: Cargo.toml
estacion/src/: administrador_red.rs  estacion.rs  main.rs  persistencia.rs  surtidor.rs
gps/: Cargo.toml
gps/src/: gps.rs  main.rs
network/: Cargo.toml
network/src/: acceptor.rs  communication_handler.rs  lib.rs
scripts/: default.sh  falla_internet.sh  falla_lider.sh  falla_nodo.sh  falla_replica.sh  reconexion.sh  stop.sh
vehiculo/: Cargo.toml
vehiculo/src/: main.rs  vehiculo.rs
